# haskell-rolodex

./: .gitignore  README.md  haskell-rolodex.cabal  main.hs
src/: App.hs  DB.hs  Model.hs  Util.hs
src/API/: Contact.hs
test/: ModelSpec.hs
