name:                haskell-rolodex
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/haskell-rolodex#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable haskell-rolodex
  hs-source-dirs:      .
  main-is:             main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , haskell-rolodex

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:     API.Contact
                     , App
                     , DB
                     , Model
                     , Util
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , either
                     , monad-control
                     , monad-logger
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , regex-compat
                     , resourcet
                     , servant-server
                     , text
                     , transformers
                     , wai
                     , wai-extra
                     , warp

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base
                     , containers
                     , haskell-rolodex
                     , hspec >= 2.1.0 && < 3
                     , servant-server
