name:                haskell-rolodex
version:             0.1.0.0
synopsis:            Tiny Haskell web service for managing contacts
description:         Please see README.md
homepage:            https://github.com/lexi-lambda/haskell-rolodex
license:             ISC
license-file:        LICENSE
author:              Alexis King
maintainer:          lexi.lambda@gmail.com
copyright:           2015 Alexis King
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable haskell-rolodex
  hs-source-dirs:      .
  main-is:             main.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , haskell-rolodex

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:     API.Contact
                     , App
                     , DB
                     , Model
                     , Util
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , either
                     , monad-control
                     , monad-logger
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , regex-compat
                     , resourcet
                     , servant-server
                     , text
                     , transformers
                     , wai
                     , wai-extra
                     , warp

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base
                     , containers
                     , haskell-rolodex
                     , hspec >= 2.1.0 && < 3
                     , servant-server
